# quicguard

./: Cargo.toml  README.md  docker-compose.yml
auth/: Cargo.toml
auth/src/: config.rs  db.rs  main.rs  otp.rs
auth/static/: index.html  otp.html
benches/: server_benchmark.rs
dashboard/: .env.example  .gitignore  Cargo.toml
dashboard/frontend/: package-lock.json  package.json  test-policy-form.cjs  vite.config.js
dashboard/frontend/src/: App.svelte  test-policy-form.js
dashboard/frontend/src/lib/: api.js  auth.js  types.js
dashboard/frontend/src/routes/: Dashboard.svelte  Login.svelte  Signup.svelte
dashboard/migrations/: 001_initial.sql
dashboard/scripts/: run-tests.sh  setup.sh
dashboard/src/: auth.rs  config.rs  db.rs  generate.rs  lib.rs  main.rs  middleware.rs  models.rs  redis_sync.rs
dashboard/src/routes/: admin.rs  auth.rs  mod.rs  organizations.rs
dashboard/tests/: api_tests.rs  crud_lifecycle.rs  delete_test.rs  routing_test.rs
dashboard/tests/common/: mod.rs
docker/: Dockerfile.auth  Dockerfile.dashboard  Dockerfile.quicguard
docs/compose/plans/: 2025-07-07-dashboard-implementation.md  2026-07-10-org-config-restructure.md
docs/compose/reports/: dashboard.md
docs/compose/specs/: 2025-07-07-dashboard-design.md
konfig/: Cargo.toml  KONFIG_CONTEXT.md  README.md
konfig/scripts/: seed-redis.sh
konfig/src/: config.rs  lib.rs  policy.rs
konfig/tests/: auth_flow_tests.rs  eval_tests.rs  integration_tests.rs  policy_tests.rs  serialization_tests.rs  state_tests.rs  tls_tests.rs
scripts/: start.sh
services/: services.yaml
src/: certs.rs  client.rs  html.rs  http2.rs  http3.rs  main.rs  protocol.rs  s2n_h3.rs  server.rs  tun_device.rs
tests/: auth_integration_test.sh  test_data.json
