[package]
name = "konfig"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jwt-gen"
path = "src/bin/jwt_gen.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "1", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
